# nui

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  nui-build.vcxproj  nui.sln  nui.vcxproj  nui.vcxproj.filters  roadmap.md  setup.bat  setup.sh  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  release.yml
build_deps/: CMakeCache.txt
docs/: README.md  animations.md  api.md  async.md  getting-started.md  resources.md  widgets.md  xml-layout.md
examples/animations/: CMakeLists.txt  README.md  main.cpp  nui-animations.vcxproj
examples/app/: CMakeLists.txt  README.md  demo.xml  example-app.vcxproj  example-app.vcxproj.filters  example.xml  layout.xml  main.cpp
examples/frameless/: CMakeLists.txt  main.cpp  nui-frameless.vcxproj  nui-frameless.vcxproj.filters  resource.rc
examples/layouts/: CMakeLists.txt  README.md  layouts-demo.xml  main.cpp  nui-layouts.vcxproj  nui-layouts.vcxproj.filters
resources/layouts/: main.xml
src/: main.cpp
src/animation/: animator.cpp  animator.h  easing.h  tween.cpp  tween.h
src/core/: application.cpp  application.h  async.cpp  async.h  input.cpp  input.h  log.h  math.h
src/renderer/: canvas.cpp  canvas.h  color.h  font.cpp  font.h  resource.cpp  resource.h  texture.cpp  texture.h
src/ui/: button.cpp  button.h  checkbox.cpp  checkbox.h  dialog.cpp  dialog.h  dropdown.cpp  dropdown.h  editbox.cpp  editbox.h  image.cpp  image.h  label.cpp  label.h  menu.cpp  menu.h  popup_geometry.h  progressbar.cpp  progressbar.h  radiobutton.cpp  radiobutton.h  scrollview.cpp  scrollview.h  slider.cpp  slider.h  tabcontrol.cpp  tabcontrol.h  titlebar.cpp  titlebar.h  tooltip.cpp  tooltip.h  treeview.cpp  treeview.h  widget.cpp  widget.h
src/xml/: layout_loader.cpp  layout_loader.h
tools/: embed_resources.py  gen_vcxproj.py  png_to_ico.py
